<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background">

    <RelativeLayout 
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlebar_background"
        android:layout_alignParentTop="true">
        <ImageButton 
            android:id="@+id/imgNavBack"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/nav_back"
            android:background="@drawable/button_top_style_1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView 
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:text="@string/reservation"
            android:shadowColor="@color/shadow"
	        android:shadowDx="0.5"
	        android:shadowDy="0.5"
	        android:shadowRadius="0.5"
	        android:layout_toRightOf="@+id/imgNavBack"
	        android:layout_centerVertical="true"/>
    </RelativeLayout>

    <ScrollView 
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lytTitlebar"
        android:fadeScrollbars="true"
        android:visibility="gone">
        <LinearLayout 
	        android:id="@+id/lytContent"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="10dp">
	        <EditText 
	            android:id="@+id/edtName"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/your_name"
	            android:textSize="14sp"
	            android:inputType="textCapWords"
	            android:background="@drawable/form_background"
	            android:padding="7dp"
	            android:layout_marginBottom="10dp"/>
	        <EditText 
	            android:id="@+id/edtNumberOfPeople"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/number_of_people"
	            android:textSize="14sp"
	            android:inputType="number"
	            android:background="@drawable/form_background"
	            android:padding="7dp"
	            android:layout_marginBottom="10dp"/>
	        <Button 
	            android:id="@+id/btnDate"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textSize="14sp"
	            android:text="@string/date"
	            android:padding="7dp"
	            android:layout_marginBottom="10dp"/>
	        <Button 
	            android:id="@+id/btnTime"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textSize="14sp"
	            android:text="@string/time"
	            android:padding="7dp"
	            android:layout_marginBottom="10dp"/>
	        <EditText 
	            android:id="@+id/edtPhone"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/phone_number"
	            android:textSize="14sp"
	            android:inputType="phone"
	            android:background="@drawable/form_background"
	            android:padding="7dp"
	            android:layout_marginBottom="10dp"/>
	        
	        <EditText 
	            android:id="@+id/edtOrderList"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/order_list"
				android:gravity="top|left"
	            android:textSize="14sp"
	            android:inputType="textMultiLine"
	            android:background="@drawable/form_background"
	            android:padding="7dp"
	            android:enabled="false"/>
	        <CheckBox 
	            android:id="@+id/chkLater"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/check_order_later"
	            android:checked="false"
	            android:layout_marginBottom="10dp"/>
	        <EditText 
	            android:id="@+id/edtComment"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/add_comment"
				android:gravity="top|left"
	            android:textSize="14sp"
	            android:inputType="textMultiLine"
	            android:background="@drawable/form_background"
	            android:padding="7dp"
	            android:layout_marginBottom="10dp"/>
	        <Button 
	            android:id="@+id/btnSend"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="14sp"
	            android:text="@string/send_reservation"
	            android:padding="7dp"
	            android:layout_marginTop="10dp"/>
    </LinearLayout>
    </ScrollView>
    <ProgressBar
	        android:id="@+id/prgLoading"
	        style="@android:style/Widget.ProgressBar.Inverse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true" />
    <TextView 
			android:id="@+id/txtAlert"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/alert"
			android:textColor="@color/text"
			android:textSize="14sp"
			android:layout_centerInParent="true"
			android:visibility="gone"/>
</RelativeLayout>
