<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background">

    <RelativeLayout 
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlebar_background"
        android:layout_alignParentTop="true">
        <ImageButton 
            android:id="@+id/imgNavBack"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/nav_back"
            android:background="@drawable/button_top_style_1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView 
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:text="@string/share"
            android:shadowColor="@color/shadow"
	        android:shadowDx="0.5"
	        android:shadowDy="0.5"
	        android:shadowRadius="0.5"
	        android:layout_toRightOf="@+id/imgNavBack"
	        android:layout_centerVertical="true"/>
    </RelativeLayout>

    <ScrollView 
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lytTitlebar"
        android:fadeScrollbars="true">
        <LinearLayout 
	        android:id="@+id/lytContent"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="10dp">
	        <EditText 
	            android:id="@+id/edtMessage"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:lines="3"
	            android:hint="@string/comment"
	            android:textSize="14sp"
	            android:inputType="textMultiLine"
	            android:gravity="left|top"
	            android:background="@drawable/form_background"
	            android:padding="7dp"/>
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
	            <CheckBox
	                android:id="@+id/chkFacebook"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	            	android:textColor="@color/text"
		            android:textStyle="bold"
		            android:textSize="18sp"
		            android:layout_marginRight="10dp"
	                android:text="@string/facebook"/>
	            <CheckBox
	                android:id="@+id/chkTwitter"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	           		android:textColor="@color/text"
		            android:textStyle="bold"
		            android:textSize="18sp"
	                android:text="@string/twitter"/>
	        </LinearLayout>
	        <Button 
	            android:id="@+id/btnPost"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="14sp"
	            android:text="@string/post"
	            android:padding="7dp"
	            android:layout_marginTop="10dp"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
