<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <RelativeLayout 
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlebar_background"
        android:layout_alignParentTop="true">
        <ImageButton 
            android:id="@+id/imgNavBack"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/nav_back"
            android:background="@drawable/button_top_style_1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView 
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:text="@string/my_order"
            android:shadowColor="@color/shadow"
	        android:shadowDx="0.5"
	        android:shadowDy="0.5"
	        android:shadowRadius="0.5"
	        android:layout_toRightOf="@+id/imgNavBack"
	        android:layout_centerVertical="true"/>
    </RelativeLayout>
    
    	<RelativeLayout 
    	    android:id="@+id/lytOrder"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
			android:layout_below="@+id/lytTitlebar"
	        android:visibility="gone">
		    <RelativeLayout
		        android:id="@+id/lytTotal"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        android:background="@color/background_actionbar">
	
		        <TextView 
		            android:id="@+id/txtTotalLabel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/text"
		            android:textStyle="bold"
		            android:textSize="18sp"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"/>
		        
		        <TextView 
		            android:id="@+id/txtTotal"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/text"
		            android:textStyle="bold"
		            android:textSize="18sp"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"/>
		    </RelativeLayout>
		    <TextView 
		        android:id="@+id/txtDetail"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/detail_background"
		        android:text="@string/detail"
		        android:textColor="@color/text"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:padding="5dp"
				android:layout_below="@+id/lytTotal"/>
	        <ListView 
	            android:id="@+id/listOrder"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:fadeScrollbars="true"
	            android:fastScrollEnabled="true"
	            android:divider="@color/background"
				android:dividerHeight="1dip"
				android:layout_below="@+id/txtDetail"
				android:layout_above="@+id/btnClear"/>
	
			<Button 
		            android:id="@+id/btnClear"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/button_style"
		            android:textColor="@color/text"
		            android:textStyle="bold"
		            android:textSize="14sp"
		            android:text="@string/clear_order"
		            android:layout_margin="10dp"
		            android:padding="7dp"
		            android:layout_alignParentBottom="true"/>
		</RelativeLayout>
		
		<ProgressBar
			android:id="@+id/prgLoading"
		    style="@android:style/Widget.ProgressBar.Inverse"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true" />
		<TextView 
		        android:id="@+id/txtAlert"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/no_order"
		        android:textColor="@color/text"
		        android:textSize="14sp"
		    	android:layout_centerInParent="true" 
		    	android:visibility="gone"/>
</RelativeLayout>
