<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background">

    <RelativeLayout 
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlebar_background"
        android:layout_alignParentTop="true">
        <ImageButton 
            android:id="@+id/imgNavBack"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/nav_back"
            android:background="@drawable/button_top_style_1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView 
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:text="@string/detail"
            android:shadowColor="@color/shadow"
	        android:shadowDx="0.5"
	        android:shadowDy="0.5"
	        android:shadowRadius="0.5"
	        android:layout_toRightOf="@+id/imgNavBack"
	        android:layout_centerVertical="true"/>
    </RelativeLayout>

    <ScrollView 
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lytTitlebar"
        android:fadeScrollbars="true"
        android:visibility="gone">
        <LinearLayout 
	        android:id="@+id/lytContent"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <ImageView 
	            android:id="@+id/imgPreview"
	            android:layout_width="fill_parent"
	            android:layout_height="150dp"
	            android:scaleType="centerCrop"/>
	        <TextView 
	            android:id="@+id/txtText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="18sp"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"/>
	        <TextView 
	            android:id="@+id/txtSubText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/subtext"
	            android:textSize="14sp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"/>
	        <TextView 
	            android:id="@+id/txtDescription"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/text"
	            android:textSize="14sp"
	            android:layout_marginTop="10dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"/>
	        <Button 
	            android:id="@+id/btnAdd"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="14sp"
	            android:text="@string/add"
	            android:padding="7dp"
	            android:layout_marginTop="10dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"/>
	        <Button 
	            android:id="@+id/btnShare"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="14sp"
	            android:text="@string/share_btn"
	            android:padding="7dp"
	            android:layout_marginTop="10dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    </ScrollView>
    <ProgressBar
	        android:id="@+id/prgLoading"
	        style="@android:style/Widget.ProgressBar.Inverse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true" />
    <TextView 
			android:id="@+id/txtAlert"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/alert"
			android:textColor="@color/text"
			android:textSize="14sp"
			android:layout_centerInParent="true"
			android:visibility="gone"/>
</RelativeLayout>
