<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background">

    <RelativeLayout 
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlebar_background"
        android:layout_alignParentTop="true">
        <ImageButton 
            android:id="@+id/imgNavBack"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/nav_back"
            android:background="@drawable/button_top_style_1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView 
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:text="@string/contact"
            android:shadowColor="@color/shadow"
	        android:shadowDx="0.5"
	        android:shadowDy="0.5"
	        android:shadowRadius="0.5"
	        android:layout_toRightOf="@+id/imgNavBack"
	        android:layout_centerVertical="true"/>
    </RelativeLayout>
    <FrameLayout 
        android:id="@+id/lytMap"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/lytTitlebar">
        <fragment 
		    android:id="@+id/map"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:name="com.google.android.gms.maps.SupportMapFragment"/>
    </FrameLayout>
    <ScrollView 
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lytMap"
        android:fadeScrollbars="true">
        <LinearLayout 
	        android:id="@+id/lytContent"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="10dp">
	        <TextView 
	            android:id="@+id/txtText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="18sp"
	            android:layout_marginTop="10dp"/>
	        <TextView 
	            android:id="@+id/txtSubText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/subtext"
	            android:textSize="14sp"/>
	        <Button 
	            android:id="@+id/btnCall"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="14sp"
	            android:text="@string/callus"
	            android:padding="7dp"
	            android:layout_marginTop="20dp"/>
	        <Button 
	            android:id="@+id/btnEmail"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_style"
	            android:textColor="@color/text"
	            android:textStyle="bold"
	            android:textSize="14sp"
	            android:text="@string/emailus"
	            android:padding="7dp"
	            android:layout_marginTop="10dp"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
