<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background">

    <RelativeLayout 
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlebar_background"
        android:layout_alignParentTop="true">
        <TextView 
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:text="@string/app_name"
            android:shadowColor="@color/shadow"
	        android:shadowDx="0.5"
	        android:shadowDy="0.5"
	        android:shadowRadius="0.5"
	        android:layout_marginLeft="10dp"
	        android:layout_centerVertical="true"/>
        <ImageButton 
            android:id="@+id/imgNews"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/news"
            android:background="@drawable/button_top_style_2"
            android:layout_toLeftOf="@+id/imgContact"
            android:layout_centerVertical="true"/>
        <ImageButton 
            android:id="@+id/imgContact"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/contact"
            android:background="@drawable/button_top_style_2"
            android:layout_toLeftOf="@+id/imgSetting"
            android:layout_centerVertical="true"/>
        <ImageButton 
            android:id="@+id/imgSetting"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/setting"
            android:background="@drawable/button_top_style_2"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout 
        android:id="@+id/lytContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/lytTitlebar"
        android:layout_above="@+id/txtCopyright">
        <ImageView 
            android:id="@+id/imgCover"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:src="@drawable/cover_image"
            android:scaleType="centerCrop"/>

        <TextView 
            android:id="@+id/txtCaption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/caption"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/main_menu"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"/>
        <ListView 
            android:id="@+id/listMainMenu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:divider="@color/background"
			android:dividerHeight="1dip"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/txtCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/copyright"
        android:textSize="12sp"
        android:text="@string/copyright"
        android:paddingTop="2dp"
        android:paddingBottom="7dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
